# cqrs

./: Cargo.toml  README.md
command/: Cargo.toml  README.md  test.db
command/src/: main.rs
command/src/context/: mod.rs
command/src/context/common/application/ports/outbound/: event_bus.rs  event_repository.rs
command/src/context/common/domain/: mod.rs
command/src/context/common/domain/entity/: aggregate.rs  event.rs  mod.rs
command/src/context/common/domain/machine/: mod.rs
command/src/context/common/domain/ports/outbound/: mod.rs
command/src/context/common/infrastructure/: mod.rs
command/src/context/common/infrastructure/adapters/: mod.rs
command/src/context/common/infrastructure/adapters/secondary/: mod.rs
command/src/context/common/infrastructure/dtos/storage/: sql.rs
command/src/context/prescription/: mod.rs
command/src/context/prescription/application/: mod.rs
command/src/context/prescription/application/ports/inbound/: create_prescription.rs  get_events.rs  mod.rs  send_event.rs  update_prescription.rs
command/src/context/prescription/application/ports/outbound/: mod.rs  prescription.rs
command/src/context/prescription/application/service/: mod.rs  outbox.rs  prescription.rs
command/src/context/prescription/domain/entity/: aggregate.rs  command.rs  error.rs  event.rs  mod.rs
command/src/context/prescription/domain/machine/: context.rs  mod.rs
command/src/context/prescription/domain/machine/states/: created.rs  mod.rs  new.rs
command/src/context/prescription/infrastructure/dtos/: mod.rs
(+6 files in other folders)
