[package]
name = "command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "postgres",
] }
thiserror = "1.0.37"
anyhow = "1.0.66"
tokio = { version = "1.21.2", features = ["full"] }
async-trait = "0.1.58"
serde = { version = "1.0", features = ["derive"] }
ulid = "1.0.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = { version = "1.0", features = ["raw_value"] }
once_cell = "1.13.0"
futures = "0.3.25"
mockall = "0.11.3"
crossbeam-channel = "0.5.6"
tokio-stream = "0.1.11"
axum = "0.5.17"
actix = "0.13"

[dev-dependencies]
